--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,12 @@
 on:
   release:
-    branches:
-      - main
+    types: [created]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Clone repository
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
       - name: Install Flutter
         uses: subosito/flutter-action@v2
         with:
