--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: hydrogenpay_flutter_webview
-description: "Flutter Wrapper for Hydrogen Payment Gateway."
-version: 1.1.1
+description: 'Flutter Wrapper for Hydrogen Payment Gateway.'
+version: 1.1.2
 homepage: https://github.com/HydrogenAfrica/hydrogenpay-flutter-webview.git
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
-  flutter: ">=1.17.0"
+  flutter: '>=1.17.0'
 
 dependencies:
   flutter:
@@ -18,7 +18,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
